[package]
name = "node-rpc"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
jsonrpc-core = "18.0.0"
jsonrpsee = { version = "0.15.1", features = ["server", "macros"] }

node-primitives = { version = "2.0.0", path = "../primitives" }
node-runtime = { version = "2.0.0", path = "../runtime" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sc-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sc-consensus-babe-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sc-consensus-epochs = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sc-finality-grandpa-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sc-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sc-rpc-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sc-sync-state-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sc-service = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
jsonrpc-pubsub = "18.0.0"
fc-db = { git = "https://github.com/deeper-chain/frontier", branch = "dev/polkadot-v0.9.34" }
fc-rpc = { git = "https://github.com/deeper-chain/frontier", branch = "dev/polkadot-v0.9.34" }
fc-rpc-core = { git = "https://github.com/deeper-chain/frontier", branch = "dev/polkadot-v0.9.34" }
fp-rpc = { git = "https://github.com/deeper-chain/frontier", branch = "dev/polkadot-v0.9.34" }
fp-storage = { git = "https://github.com/deeper-chain/frontier", branch = "dev/polkadot-v0.9.34" }
pallet-ethereum = { git = "https://github.com/deeper-chain/frontier", branch = "dev/polkadot-v0.9.34" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
