[package]
name = "node-rpc"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/polkadot-sdk/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
node-primitives = { path = "../primitives" }
node-runtime = { path = "../runtime" }

jsonrpsee = { version = "0.16.2", features = ["server"] }

fc-db = { git = "https://github.com/deeper-chain/frontier", branch = "dev/polkadot-v1.1.0" }
fc-rpc = { git = "https://github.com/deeper-chain/frontier", branch = "dev/polkadot-v1.1.0" }
fc-rpc-core = { git = "https://github.com/deeper-chain/frontier", branch = "dev/polkadot-v1.1.0" }
fp-rpc = { git = "https://github.com/deeper-chain/frontier", branch = "dev/polkadot-v1.1.0" }
fp-storage = { git = "https://github.com/deeper-chain/frontier", branch = "dev/polkadot-v1.1.0" }
fc-storage = {default-features = false, git = "https://github.com/deeper-chain/frontier", branch = "dev/polkadot-v1.1.0" }
fc-api = {default-features = false, git = "https://github.com/deeper-chain/frontier", branch = "dev/polkadot-v1.1.0" }
fc-mapping-sync = {default-features = false, git = "https://github.com/deeper-chain/frontier", branch = "dev/polkadot-v1.1.0" }

pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0" }
mmr-rpc = {git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0" }
sc-chain-spec = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0" }
sc-client-api = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0" }
sc-consensus-babe = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0" }
sc-consensus-babe-rpc = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0" }
sc-consensus-grandpa = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0" }
sc-consensus-grandpa-rpc = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0" }
sc-rpc = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0" }
sc-rpc-api = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0" }
sc-rpc-spec-v2 = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0" }
sc-sync-state-rpc = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0" }
sp-api = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0" }
sp-block-builder = {git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0"}
sp-blockchain = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0"}
sp-consensus = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0" }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0" }
sp-inherents = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0" }
sp-consensus-babe = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0" }
sp-keystore = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0" }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0" }
sp-statement-store = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0" }
substrate-state-trie-migration-rpc = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0" }
sc-network = {git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0", default-features = false }
sc-network-sync = {git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0", default-features = false }
sc-transaction-pool = {git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0", default-features = false }
