[package]
name = "node-rpc"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/polkadot-sdk/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
node-primitives = { workspace = true }
node-runtime = { workspace = true }

jsonrpsee = { workspace = true, features = ["server"] }

fc-db = { workspace = true, default-features = true }
fc-rpc = { workspace = true, default-features = true }
fc-rpc-core = { workspace = true, default-features = true }
fp-rpc = { workspace = true, default-features = true }
fp-storage = { workspace = true, default-features = true }
fc-storage = { workspace = true }
fc-api = { workspace = true }
fc-mapping-sync = { workspace = true }

pallet-transaction-payment-rpc = { workspace = true, default-features = true }
mmr-rpc = { workspace = true, default-features = true }
sc-chain-spec = { workspace = true, default-features = true }
sc-client-api = { workspace = true, default-features = true }
sc-consensus-babe = { workspace = true, default-features = true }
sc-consensus-babe-rpc = { workspace = true, default-features = true }
sc-consensus-grandpa = { workspace = true, default-features = true }
sc-consensus-grandpa-rpc = { workspace = true, default-features = true }
sc-rpc = { workspace = true, default-features = true }
sc-rpc-api = { workspace = true, default-features = true }
sc-rpc-spec-v2 = { workspace = true, default-features = true }
sc-sync-state-rpc = { workspace = true, default-features = true }
sc-transaction-pool-api = { workspace = true, default-features = true }
sp-api = { workspace = true, default-features = true }
sp-block-builder = {workspace = true, default-features = true}
sp-blockchain = { workspace = true, default-features = true}
sp-consensus = { workspace = true, default-features = true }
sp-core = { workspace = true, default-features = true }
sp-inherents = { workspace = true, default-features = true }
sp-consensus-babe = { workspace = true, default-features = true }
sp-keystore = { workspace = true, default-features = true }
sp-runtime = { workspace = true, default-features = true }
sp-statement-store = { workspace = true, default-features = true }
substrate-frame-rpc-system = { workspace = true, default-features = true }
substrate-state-trie-migration-rpc = { workspace = true, default-features = true }
sc-network = {workspace = true}
sc-network-sync = {workspace = true }
sc-transaction-pool = {workspace = true }
