[package]
name = "e2-chain-runtime"
version = "2.0.0"
authors = ["deeper.network dev"]
edition = "2018"
build = "build.rs"
license = "Apache-2.0"
repository = 'https://github.com/e2chain-dev/e2-chain-v2.0.0'

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# third-party dependencies
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false, features = ["derive"] }
integer-sqrt = { version = "0.1.2" }
serde = { version = "1.0.102", optional = true }
static_assertions = "1.1.0"
hex-literal = { version = "0.3.1", optional = true }

# primitives
sp-authority-discovery = { version = "2.0.0", default-features = false }
sp-consensus-babe = { version = "0.8.0", default-features = false }
sp-block-builder = { default-features = false, version = "2.0.0"}
sp-inherents = { version = "2.0.0", default-features = false }
node-primitives = { version = "2.0.0", default-features = false, path = "../primitives" }
sp-offchain = { version = "2.0.0", default-features = false }
sp-core = { version = "2.0.0", default-features = false }
sp-std = { version = "2.0.0", default-features = false }
sp-api = { version = "2.0.0", default-features = false }
sp-runtime = { version = "2.0.0", default-features = false }
sp-staking = { version = "2.0.0", default-features = false }
sp-keyring = { version = "2.0.0", optional = true}
sp-session = { version = "2.0.0", default-features = false }
sp-transaction-pool = { version = "2.0.0", default-features = false}
sp-version = { version = "2.0.0", default-features = false }

# frame dependencies
frame-executive = { version = "2.0.0", default-features = false}
frame-benchmarking = { version = "2.0.0", default-features = false, optional = true }
frame-support = { version = "2.0.0", default-features = false}
frame-system = { version = "2.0.0", default-features = false}
frame-system-benchmarking = { version = "2.0.0", default-features = false, optional = true }
frame-system-rpc-runtime-api = { version = "2.0.0", default-features = false}
pallet-authority-discovery = { version = "2.0.0", default-features = false}
pallet-authorship = { version = "2.0.0", default-features = false}
pallet-babe = { version = "2.0.0", default-features = false}
pallet-collective = { version = "2.0.0", default-features = false}
pallet-contracts = { version = "2.0.0", default-features = false}
pallet-contracts-primitives = { version = "2.0.0", default-features = false}
pallet-contracts-rpc-runtime-api = { version = "0.8.0", default-features = false}
pallet-democracy = { version = "2.0.0", default-features = false}
pallet-elections-phragmen = { version = "2.0.0", default-features = false}
pallet-finality-tracker = { version = "2.0.0", default-features = false}
pallet-grandpa = { version = "2.0.0", default-features = false}
pallet-im-online = { version = "2.0.0", default-features = false}
pallet-indices = { version = "2.0.0", default-features = false}
pallet-identity = { version = "2.0.0", default-features = false}
pallet-membership = { version = "2.0.0", default-features = false}
pallet-multisig = { version = "2.0.0", default-features = false}
pallet-offences = { version = "2.0.0", default-features = false}
pallet-offences-benchmarking = { version = "2.0.0", default-features = false, optional = true }
pallet-proxy = { version = "2.0.0", default-features = false}
pallet-randomness-collective-flip = { version = "2.0.0", default-features = false}
pallet-recovery = { version = "2.0.0", default-features = false}
pallet-session = { version = "2.0.0", features = ["historical"], default-features = false }
pallet-session-benchmarking = { version = "2.0.0", default-features = false, optional = true }
pallet-staking-reward-curve = { version = "2.0.0", default-features = false}
pallet-scheduler = { version = "2.0.0", default-features = false}
pallet-society = { version = "2.0.0", default-features = false}
pallet-sudo = { version = "2.0.0", default-features = false}
pallet-timestamp = { version = "2.0.0", default-features = false}
pallet-treasury = { version = "2.0.0", default-features = false}
pallet-utility = { version = "2.0.0", default-features = false}
pallet-transaction-payment = { version = "2.0.0", default-features = false}
pallet-transaction-payment-rpc-runtime-api = { version = "2.0.0", default-features = false}
pallet-vesting = { version = "2.0.0", default-features = false}


# local pallet dependencies
deeper-node = {package = "pallet-deeper-node", default-features = false, path = "../pallets/deeper-node", version = "2.0.0"}
micropayment = {package = "pallet-micropayment", default-features = false, path = "../pallets/micropayment", version = "2.0.0"}
pallet-balances = {package = "pallet-balances", default-features = false, path = "../pallets/balances",  version = "2.0.0"}
pallet-credit = {package = "pallet-credit", default-features = false, path = "../pallets/credit", version = "2.0.0"}
pallet-delegating = {package = "pallet-delegating", default-features = false, path = "../pallets/delegating", version = "2.0.0"}
pallet-staking_with_credit = {package = "pallet-staking_with_credit", default-features = false, path = "../pallets/staking_with_credit", version = "2.0.0"}

[build-dependencies]
wasm-builder-runner = { version = "1.0.5", package = "substrate-wasm-builder-runner"}

[dev-dependencies]
sp-io = '2.0.0' 

[features]
default = ["std"]
with-tracing = [ "frame-executive/with-tracing" ]
std = [
	"sp-authority-discovery/std",
	"pallet-authority-discovery/std",
	"pallet-authorship/std",
	"sp-consensus-babe/std",
	"pallet-babe/std",
	"sp-block-builder/std",
	"codec/std",
	"pallet-collective/std",
	"pallet-contracts/std",
	"pallet-contracts-primitives/std",
	"pallet-contracts-rpc-runtime-api/std",
	"pallet-democracy/std",
	"pallet-elections-phragmen/std",
	"frame-executive/std",
	"pallet-finality-tracker/std",
	"pallet-grandpa/std",
	"pallet-im-online/std",
	"pallet-indices/std",
	"sp-inherents/std",
	"pallet-membership/std",
	"pallet-multisig/std",
	"pallet-identity/std",
	"pallet-scheduler/std",
	"node-primitives/std",
	"sp-offchain/std",
	"pallet-offences/std",
	"pallet-proxy/std",
	"sp-core/std",
	"pallet-randomness-collective-flip/std",
	"sp-std/std",
	"serde",
	"pallet-session/std",
	"sp-api/std",
	"sp-runtime/std",
	"sp-staking/std",
	"sp-keyring",
	"sp-session/std",
	"pallet-sudo/std",
	"frame-support/std",
	"frame-benchmarking/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"pallet-treasury/std",
	"sp-transaction-pool/std",
	"pallet-utility/std",
	"sp-version/std",
	"pallet-society/std",
	"pallet-recovery/std",
	"pallet-vesting/std",
	"pallet-credit/std",
	"pallet-delegating/std",
	"pallet-staking_with_credit/std",
    "pallet-balances/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"pallet-babe/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-collective/runtime-benchmarks",
	"pallet-contracts/runtime-benchmarks",
	"pallet-democracy/runtime-benchmarks",
	"pallet-elections-phragmen/runtime-benchmarks",
	"pallet-grandpa/runtime-benchmarks",
	"pallet-identity/runtime-benchmarks",
	"pallet-im-online/runtime-benchmarks",
	"pallet-indices/runtime-benchmarks",
	"pallet-multisig/runtime-benchmarks",
	"pallet-proxy/runtime-benchmarks",
	"pallet-scheduler/runtime-benchmarks",
	"pallet-society/runtime-benchmarks",
	"pallet-staking_with_credit/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"pallet-treasury/runtime-benchmarks",
	"pallet-utility/runtime-benchmarks",
	"pallet-vesting/runtime-benchmarks",
	"pallet-offences-benchmarking",
	"pallet-session-benchmarking",
	"frame-system-benchmarking",
	"hex-literal",
]
