[package]
name = "substrate-test-client"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.1" }
futures = "0.3.4"
futures01 = { package = "futures", version = "0.1.29" }
hash-db = "0.15.2"
hex = "0.4"
serde = "1.0.55"
serde_json = "1.0.55"
sc-client-api = '2.0.0'
sc-client-db = { version = "0.8.0", features = ["test-helpers"]}
sc-consensus = '0.8.0'
sc-executor = '0.8.0'
sc-light = '2.0.0'
sc-service = { version = "0.8.0", default-features = false, features = ["test-helpers"]}
sp-blockchain = '2.0.0'
sp-consensus = '0.8.0'
sp-core = '2.0.0'
sp-keyring = '2.0.0'
sp-runtime = '2.0.0'
sp-state-machine = '0.8.0'
