[package]
name = "substrate-test-client"
version = "2.0.1"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0" }
futures = "0.3.9"
futures01 = { package = "futures", version = "0.1.29" }
hash-db = "0.15.2"
hex = "0.4"
serde = "1.0.55"
serde_json = "1.0.55"
sc-client-api = { git = "https://github.com/paritytech/substrate", version = "4.0.0-dev" }
sc-client-db = { git = "https://github.com/paritytech/substrate", version = "0.10.0-dev", features = ["test-helpers"]}
sc-consensus = { git = "https://github.com/paritytech/substrate", version = "0.10.0-dev" }
sc-executor = { git = "https://github.com/paritytech/substrate", version = "0.10.0-dev" }
sc-light = { git = "https://github.com/paritytech/substrate", version = "4.0.0-dev" }
sc-service = { git = "https://github.com/paritytech/substrate", version = "0.10.0-dev", default-features = false, features = ["test-helpers"]}
sp-blockchain = { git = "https://github.com/paritytech/substrate", version = "4.0.0-dev" }
sp-consensus = { git = "https://github.com/paritytech/substrate", version = "0.10.0-dev" }
sp-core = { git = "https://github.com/paritytech/substrate", version = "4.0.0-dev" }
sp-keystore = { git = "https://github.com/paritytech/substrate", version = "0.10.0-dev" }
sp-keyring = { git = "https://github.com/paritytech/substrate", version = "4.0.0-dev" }
sp-runtime = { git = "https://github.com/paritytech/substrate", version = "4.0.0-dev" }
sp-state-machine = { git = "https://github.com/paritytech/substrate", version = "0.10.0-dev" }
